--- a/src/app/pages/register-project/register-project.page.html
+++ b/src/app/pages/register-project/register-project.page.html
@@ -1,9 +1,37 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>register-project</ion-title>
-  </ion-toolbar>
-</ion-header>
+<app-ionic-header [title]="headerTitle"></app-ionic-header>
 
 <ion-content>
+  <form>
+    <ion-grid>
+      <ion-row>
+        <ion-col size="12">
+          <ion-item>
+            <ion-label position="floating">Título</ion-label>
+            <ion-input type="text"></ion-input>
+          </ion-item>
+        </ion-col>
+        <ion-col size="12">
+          <ion-item>
+            <ion-label position="floating">Descrição</ion-label>
+            <ion-textarea rows="5" cols="20" placeholder="Descreva a tarefa aqui..."></ion-textarea>
+          </ion-item>
+        </ion-col>
+      </ion-row>
 
+      <ion-row>
+        <ion-col size="6">
+            <ion-button color="primary" type="submit" size="large">
+                Salvar
+            </ion-button>
+        </ion-col>
+        <ion-col size="6">
+            <ion-button color="primary" type="submit" size="large">
+                Cancelar
+            </ion-button>
+        </ion-col>
+    </ion-row>
+    </ion-grid>
+  </form>
 </ion-content>
+
+<app-ionic-tabs></app-ionic-tabs>
