--- a/src/app/pages/register-project/register-project.page.html
+++ b/src/app/pages/register-project/register-project.page.html
@@ -19,17 +19,10 @@
       </ion-row>
 
       <ion-row>
-        <ion-col size="6">
-            <ion-button color="primary" type="submit" size="large">
-                Salvar
-            </ion-button>
+        <ion-col size="12">
+          <ion-button color="primary-custom" expand="full">Criar Projeto</ion-button>
         </ion-col>
-        <ion-col size="6">
-            <ion-button color="primary" type="submit" size="large">
-                Cancelar
-            </ion-button>
-        </ion-col>
-    </ion-row>
+      </ion-row>
     </ion-grid>
   </form>
 </ion-content>
