--- a/src/app/pages/register-task/register-task.page.html
+++ b/src/app/pages/register-task/register-task.page.html
@@ -5,8 +5,8 @@
         <ion-grid>
             <ion-row>
                 <ion-col size="12">
-                    <ion-item>
-                        <ion-select class="custom-options" placeholder="Selecione o Projeto" id="ion-select-project">
+                    <ion-item lines="none">
+                        <ion-select class="custom-options" id="ion-select-project" placeholder="Selecione o Projeto" id="ion-select-project">
                             <ion-select-option value="1">Projeto 1</ion-select-option>
                             <ion-select-option value="2">Projeto 2</ion-select-option>
                             <ion-select-option value="3">Projeto 3</ion-select-option>
@@ -14,13 +14,13 @@
                     </ion-item>
                 </ion-col>
                 <ion-col size="12">
-                    <ion-item>
+                    <ion-item lines="none">
                         <ion-label position="floating">Título</ion-label>
                         <ion-input type="text"></ion-input>
                     </ion-item>
                 </ion-col>
                 <ion-col size="12">
-                    <ion-item>
+                    <ion-item lines="none">
                         <ion-label position="floating">Descrição</ion-label>
                         <ion-textarea rows="5" cols="20" placeholder="Descreva a tarefa aqui..."></ion-textarea>
                     </ion-item>
@@ -60,17 +60,10 @@
                     </ion-item>
                 </ion-col>
             </ion-row>
-
+            
             <ion-row>
-                <ion-col size="6">
-                    <ion-button color="primary" type="submit" size="large">
-                        Salvar
-                    </ion-button>
-                </ion-col>
-                <ion-col size="6">
-                    <ion-button color="primary" type="submit" size="large">
-                        Cancelar
-                    </ion-button>
+                <ion-col size="12">
+                    <ion-button color="primary-custom" expand="full" class="create-task">Criar Tarefa</ion-button>
                 </ion-col>
             </ion-row>
         </ion-grid>
