--- a/src/app/pages/task-list/task-list.page.html
+++ b/src/app/pages/task-list/task-list.page.html
@@ -11,21 +11,31 @@
 
   <ion-list>
     <ion-item-group>
-      <ion-item class="ion-item-task" lines="none">
+      <ion-item class="ion-item-task low-priority" lines="none">
         <ion-checkbox color="primary"></ion-checkbox>
         <ion-label>Item 1</ion-label>
+        <p class="deadline">26/02/2021</p>
         <ion-icon name="arrow-forward"></ion-icon>
       </ion-item>
 
-      <ion-item class="ion-item-task" lines="none">
+      <ion-item class="ion-item-task medium-priority" lines="none">
         <ion-checkbox color="primary"></ion-checkbox>
         <ion-label>Item 2</ion-label>
+        <p class="deadline">26/02/2021</p>
         <ion-icon name="arrow-forward"></ion-icon>
       </ion-item>
 
-      <ion-item class="ion-item-task" lines="none">
+      <ion-item class="ion-item-task high-priority" lines="none">
         <ion-checkbox color="primary"></ion-checkbox>
         <ion-label>Item 3</ion-label>
+        <p class="deadline">26/02/2021</p>
+        <ion-icon name="arrow-forward"></ion-icon>
+      </ion-item>
+
+      <ion-item class="ion-item-task high-priority finished" lines="none">
+        <ion-checkbox color="primary"></ion-checkbox>
+        <ion-label>Item 4</ion-label>
+        <p class="deadline">26/02/2021</p>
         <ion-icon name="arrow-forward"></ion-icon>
       </ion-item>
     </ion-item-group>
