CRUD utilizando Storage

--- a/src/app/components/ionic-tabs/ionic-tabs.component.html
+++ b/src/app/components/ionic-tabs/ionic-tabs.component.html
@@ -2,16 +2,16 @@
   <ion-tabs>
     <ion-tab-bar slot="bottom">
       <ion-tab-button (click)="goToTaskList()">
-        <ion-icon name="list-outline" color="secondary-custom"></ion-icon>
-        <ion-label color="secondary-custom">Lista de Tarefas</ion-label>
+        <ion-icon name="list-outline"></ion-icon>
+        <ion-label>Lista de Tarefas</ion-label>
       </ion-tab-button>
       <ion-tab-button (click)="goToRegisterTask()">
-        <ion-icon name="add-circle-outline" color="secondary-custom"></ion-icon>
-        <ion-label color="secondary-custom">Cadastrar Tarefas</ion-label>
+        <ion-icon name="add-circle-outline"></ion-icon>
+        <ion-label>Cadastrar Tarefas</ion-label>
       </ion-tab-button>
       <ion-tab-button (click)="goToRegisterProject()">
-        <ion-icon name="add-circle-outline" color="secondary-custom"></ion-icon>
-        <ion-label color="secondary-custom">Cadastrar Projeto</ion-label>
+        <ion-icon name="add-circle-outline"></ion-icon>
+        <ion-label>Cadastrar Projeto</ion-label>
       </ion-tab-button>
     </ion-tab-bar>
   </ion-tabs>
