--- a/src/app/pages/task-list/task-list.page.scss
+++ b/src/app/pages/task-list/task-list.page.scss
@@ -1,9 +1,9 @@
 ion-checkbox {
     position: relative;
     margin: 0px 10px;
-    --border-radius: 0;
-    --background-checked: #000;
+    --background-checked: var(--ion-color-success);
     --border-color-checked: #fff;
+    --background-activated: #fff;
 }
 
 #ion-select-project {
@@ -18,29 +18,35 @@ ion-item-group {
         margin: 24px 8px;
         font-size: 16px;
         padding: 16px 0px 16px 0px;
+        --background-activated: rgb(255, 255, 255);
 
         .deadline {
             position: relative;
             top: 20px;
         }
+
+        .edit-item {
+            padding: 2px 4px;
+            border-radius: 10px;
+            box-shadow: rgb(100 110 111 / 64%) -2px 3px 0px;
+            margin-bottom: 30px;
+            font-size: 24px;
+        }
+        .edit-item:active {
+            background-color: rgba(0, 0, 0, 0.25);
+        }
     }
 
     .low-priority {
-        background-color: var(--ion-color-success-tint);
-        --background: linear-gradient();
-        background-image: linear-gradient(var(--ion-color-success-tint), var(--ion-color-success));
+        border: 2px solid var(--ion-color-success-tint);
     }
 
     .medium-priority {
-        background-color: var(--ion-color-warning-tint);
-        --background: linear-gradient();
-        background-image: linear-gradient(var(--ion-color-warning-tint), var(--ion-color-warning));
+        border: 2px solid var(--ion-color-warning-tint);
     }
 
     .high-priority {
-        background-color: var(--ion-color-danger-tint);
-        --background: linear-gradient();
-        background-image: linear-gradient(var(--ion-color-danger-tint), var(--ion-color-danger));
+        border: 2px solid var(--ion-color-danger-tint);
     }
 }
 
