Header title detalhes tarefa, pequenas correções na edição de tarefa

--- a/src/app/pages/register-task/register-task.page.html
+++ b/src/app/pages/register-task/register-task.page.html
@@ -63,8 +63,8 @@
                             placeholder="Selecione"
                             formControlName="rememberMe">
                             <ion-select-option value="3">1 Dia Antes da data de entrega</ion-select-option>
-                            <ion-select-option value="2">5 Dia Antes da data de entrega</ion-select-option>
-                            <ion-select-option value="1">7 Dia Antes da data de entrega</ion-select-option>
+                            <ion-select-option value="2">5 Dias Antes da data de entrega</ion-select-option>
+                            <ion-select-option value="1">7 Dias Antes da data de entrega</ion-select-option>
                         </ion-select>
                     </ion-item>
                 </ion-col>
