--- a/src/app/pages/details-task/details-task.page.html
+++ b/src/app/pages/details-task/details-task.page.html
@@ -64,8 +64,8 @@
                             placeholder="Selecione"
                             formControlName="rememberMe">
                             <ion-select-option value="3">1 Dia Antes da data de entrega</ion-select-option>
-                            <ion-select-option value="2">5 Dia Antes da data de entrega</ion-select-option>
-                            <ion-select-option value="1">7 Dia Antes da data de entrega</ion-select-option>
+                            <ion-select-option value="2">5 Dias Antes da data de entrega</ion-select-option>
+                            <ion-select-option value="1">7 Dias Antes da data de entrega</ion-select-option>
                         </ion-select>
                     </ion-item>
                 </ion-col>
@@ -74,7 +74,7 @@
             <ion-row>
                 <ion-col size="12">
                     <ion-button color="primary-custom" expand="full" class="create-task" type="submit">
-                        <strong>Criar Tarefa</strong>
+                        <strong>Atualizar Tarefa</strong>
                     </ion-button>
                 </ion-col>
             </ion-row>
