--- a/src/app/pages/task-list/task-list.page.html
+++ b/src/app/pages/task-list/task-list.page.html
@@ -2,7 +2,9 @@
 
 <ion-content>
   <ion-item>
-    <ion-select class="custom-options project-select" placeholder="Selecione o Projeto" id="ion-select-project"
+    <ion-select class="custom-options project-select" placeholder="Selecione o Projeto" 
+    [(ngModel)]="selectedProject"
+      id="ion-select-project"
       (ionChange)="changeProject($event)">
       <ion-select-option value="{{ item.key }}" *ngFor="let item of projectList">{{ item.project._title }}
       </ion-select-option>
@@ -11,34 +13,15 @@
 
   <ion-list *ngFor="let item of taskList">
     <ion-item-group>
-      <ion-item class="ion-item-task low-priority" lines="none">
-        <ion-checkbox color="primary"></ion-checkbox>
+      <ion-item [ngClass]="{'high-priority': item.task._priority == 3 , 
+                            'medium-priority': item.task._priority == 2, 
+                            'low-priority': item.task._priority == 1}" class="ion-item-task" lines="none">
+        <ion-checkbox color="primary" (click)="completeTask($event)" value="{{ item.task._key }}"></ion-checkbox>
         <ion-label><b>{{ item.task._title }}</b></ion-label>
         <p class="deadline">{{ this.formatDate(item.task._deadlineDate) }}</p>
         <div class="edit-item" (click)="goToEdit(item)">
           <ion-icon name="add-circle-outline"></ion-icon>
         </div>
-      </ion-item>
-
-      <ion-item class="ion-item-task medium-priority" lines="none">
-        <ion-checkbox color="primary"></ion-checkbox>
-        <ion-label>Item 2</ion-label>
-        <p class="deadline">26/02/2021</p>
-        <ion-icon name="arrow-forward"></ion-icon>
-      </ion-item>
-
-      <ion-item class="ion-item-task high-priority" lines="none">
-        <ion-checkbox color="primary"></ion-checkbox>
-        <ion-label>Item 3</ion-label>
-        <p class="deadline">26/02/2021</p>
-        <ion-icon name="arrow-forward"></ion-icon>
-      </ion-item>
-
-      <ion-item class="ion-item-task high-priority finished" lines="none">
-        <ion-checkbox color="primary"></ion-checkbox>
-        <ion-label>Item 4</ion-label>
-        <p class="deadline">26/02/2021</p>
-        <ion-icon name="arrow-forward"></ion-icon>
       </ion-item>
     </ion-item-group>
   </ion-list>
