fixed register-project html

--- a/src/app/pages/register-project/register-project.page.html
+++ b/src/app/pages/register-project/register-project.page.html
@@ -28,7 +28,7 @@
 
     <ion-row>
       <ion-col>
-        <h3>Lista de Times</h3>
+        <h3 align="center">Projetos</h3>
         <ion-list *ngFor="let proj of projects">
           <ion-item-sliding>
             <ion-item>
