--- a/src/app/pages/task-list/task-list.page.html
+++ b/src/app/pages/task-list/task-list.page.html
@@ -6,19 +6,19 @@
     [(ngModel)]="selectedProject"
       id="ion-select-project"
       (ionChange)="changeProject($event)">
-      <ion-select-option value="{{ item.key }}" *ngFor="let item of projectList">{{ item.project._title }}
+      <ion-select-option value="{{ item.id }}" *ngFor="let item of projectList">{{ item.title }}
       </ion-select-option>
     </ion-select>
   </ion-item>
 
   <ion-list *ngFor="let item of taskList">
     <ion-item-group>
-      <ion-item [ngClass]="{'high-priority': item.task._priority == 3 , 
-                            'medium-priority': item.task._priority == 2, 
-                            'low-priority': item.task._priority == 1}" class="ion-item-task" lines="none">
-        <ion-checkbox color="primary" (click)="completeTask($event)" value="{{ item.task._key }}"></ion-checkbox>
-        <ion-label><b>{{ item.task._title }}</b></ion-label>
-        <p class="deadline">{{ this.formatDate(item.task._deadlineDate) }}</p>
+      <ion-item [ngClass]="{'high-priority': item.priority == 3 , 
+                            'medium-priority': item.priority == 2, 
+                            'low-priority': item.priority == 1}" class="ion-item-task" lines="none">
+        <ion-checkbox color="primary" (click)="completeTask($event)" value="{{ item.id }}"></ion-checkbox>
+        <ion-label><b>{{ item.title }}</b></ion-label>
+        <p class="deadline">{{ this.formatDate(item.deadlineDate) }}</p>
         <div class="edit-item" (click)="goToEdit(item)">
           <ion-icon name="add-circle-outline"></ion-icon>
         </div>
