--- a/src/app/pages/register-project/register-project.page.html
+++ b/src/app/pages/register-project/register-project.page.html
@@ -12,7 +12,7 @@
       <ion-col size="12">
         <ion-item>
           <ion-label position="floating">Descrição</ion-label>
-          <ion-textarea rows="5" cols="20" placeholder="Descreva a tarefa aqui..." [(ngModel)]="project.description">
+          <ion-textarea rows="5" cols="20" placeholder="Descrevo a tarefa aqui..." [(ngModel)]="project.description">
           </ion-textarea>
         </ion-item>
       </ion-col>
