--- a/src/app/pages/task-list/task-list.page.html
+++ b/src/app/pages/task-list/task-list.page.html
@@ -13,12 +13,12 @@
 
   <ion-list *ngFor="let item of taskList">
     <ion-item-group>
-      <ion-item [ngClass]="{'high-priority': item.priority == 3 , 
-                            'medium-priority': item.priority == 2, 
-                            'low-priority': item.priority == 1}" class="ion-item-task" lines="none">
-        <ion-checkbox color="primary" (click)="completeTask($event)" value="{{ item.id }}"></ion-checkbox>
-        <ion-label><b>{{ item.title }}</b></ion-label>
-        <p class="deadline">{{ this.formatDate(item.deadlineDate) }}</p>
+      <ion-item [ngClass]="{'high-priority': item._priority == 3 , 
+                            'medium-priority': item._priority == 2, 
+                            'low-priority': item._priority == 1}" class="ion-item-task" lines="none">
+        <ion-checkbox color="primary" (click)="completeTask($event)" value="{{ item._id }}"></ion-checkbox>
+        <ion-label><b>{{ item._title }}</b></ion-label>
+        <p class="deadline">{{ this.formatDate(item._deadlineDate) }}</p>
         <div class="edit-item" (click)="goToEdit(item)">
           <ion-icon name="add-circle-outline"></ion-icon>
         </div>
