--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -1,9 +1,30 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>login</ion-title>
-  </ion-toolbar>
-</ion-header>
+<app-ionic-header [title]="headerTitle"></app-ionic-header>
+
 
 <ion-content>
-
+  <form [formGroup]="_formLogin" (ngSubmit)="submitForm()" novalidate>
+    <ion-grid>
+      <ion-row>
+        <ion-col size="12">
+          <ion-item lines="none">
+            <ion-label position="floating">Email</ion-label>
+            <ion-input type="text"></ion-input>
+        </ion-item>
+        </ion-col>
+        <ion-col size="12">
+          <ion-item lines="none">
+            <ion-label position="floating">Senha</ion-label>
+            <ion-input type="text"></ion-input>
+        </ion-item>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col size="12">
+            <ion-button color="success" expand="full" class="create-task" type="submit">
+                <strong>Entrar</strong>
+            </ion-button>
+        </ion-col>
+    </ion-row>
+    </ion-grid>
+  </form>
 </ion-content>
