Implementado login com facebook

--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -39,7 +39,7 @@
       </ion-row>
       <ion-row>
         <ion-col class="ion-align-self-end" size="12">
-          <ion-button color="primary" class="social-button" type="submit">
+          <ion-button color="primary" class="social-button" (click)="logarComFacebook()">
             <ion-icon name="logo-facebook"></ion-icon>
             <strong class="social-login-labels">Entrar com Facebook</strong>
           </ion-button>
