--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -39,23 +39,25 @@
       </ion-row>
       <ion-row>
         <ion-col class="ion-align-self-end" size="12">
-          <ion-button color="primary" class="social-button" (click)="logarComFacebook()">
+          <ion-button color="primary" (click)="logarComFacebook()">
             <ion-icon name="logo-facebook"></ion-icon>
             <strong class="social-login-labels">Entrar com Facebook</strong>
           </ion-button>
         </ion-col>
         <ion-col size="12">
-          <ion-button color="danger" class="social-button" (click)="logarComGoogle()">
+          <ion-button color="danger" (click)="logarComGoogle()">
             <ion-icon name="logo-google"></ion-icon>
             <strong class="social-login-labels">Entrar com Google</strong>
           </ion-button>
         </ion-col>
-        <ion-col size="12">
-          <ion-button color="secondary" class="social-button" type="submit">
-            <ion-icon name="logo-twitter"></ion-icon>
-            <strong class="social-login-labels">Entrar com Twitter</strong>
-          </ion-button>
-        </ion-col>
+        <ion-row>
+          <ion-col size="12">
+            <ion-button color="medium" (click)="irParaCadastrar()">
+              <ion-icon name="open-outline"></ion-icon>
+              <strong class="register-labels">Não tem cadastro? Clique Aqui</strong>
+            </ion-button>
+          </ion-col>
+        </ion-row>
       </ion-row>
     </ion-grid>
   </form>
