Cadastro de usuário finalizado.

--- a/src/app/pages/signup/signup.page.html
+++ b/src/app/pages/signup/signup.page.html
@@ -1,8 +1,5 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>SignUp Page</ion-title>
-  </ion-toolbar>
-</ion-header>
+<app-ionic-header [title]="headerTitle"></app-ionic-header>
+
 
 <ion-content>
   <ion-list>
@@ -12,21 +9,21 @@
         <ion-input type="email" formControlName="email"></ion-input>
       </ion-item>
       <!-- Error messages -->
-      <span *ngIf="isSubmitted && errorControl.email.errors?.required">
+      <span class="error" *ngIf="isSubmitted && errorControl.email.errors?.required">
         Email é Obrigatório.
       </span>
-      <span *ngIf="isSubmitted && errorControl.email.errors?.email">
-        Formato de Email inválido
+      <span class="error" *ngIf="isSubmitted && errorControl.email.errors?.email">
+        Formato de Email inválido.
       </span>
       <ion-item>
         <ion-label position="floating">Senha</ion-label>
         <ion-input type="password" formControlName="senha"></ion-input>
       </ion-item>
       <!-- Error messages -->
-      <span *ngIf="isSubmitted && errorControl.senha.errors?.required">
+      <span class="error" *ngIf="isSubmitted && errorControl.senha.errors?.required">
         Senha é Obrigatória.
       </span>
-      <span *ngIf="isSubmitted && errorControl.senha.errors?.minlength">
+      <span class="error" *ngIf="isSubmitted && errorControl.senha.errors?.minlength">
         A senha é de no mínimo 6 caracteres.
       </span>
       <ion-item>
@@ -34,16 +31,16 @@
         <ion-input type="password" formControlName="confSenha"></ion-input>
       </ion-item>
       <!-- Error messages -->
-      <span *ngIf="isSubmitted && errorControl.confSenha.errors?.required">
+      <span class="error" *ngIf="isSubmitted && errorControl.confSenha.errors?.required">
         Senha é Obrigatória.
       </span>
-      <span *ngIf="isSubmitted && errorControl.confSenha.errors?.minlength">
+      <span class="error" *ngIf="isSubmitted && errorControl.confSenha.errors?.minlength">
         A Confirmação senha é de no mínimo 6 caracteres.
       </span>
-      <span *ngIf="isSubmitted && errorControl.confSenha.errors?.minlength">
+      <span class="error" *ngIf="isSubmitted && errorControl.confSenha.errors?.minlength">
         A Confirmação senha é de no mínimo 6 caracteres.
       </span>
-      <span *ngIf="isSubmitted && this._formCadastrar.value['senha'] != this._formCadastrar.value['confSenha']">
+      <span class="error" *ngIf="isSubmitted && this._formCadastrar.value['senha'] != this._formCadastrar.value['confSenha']">
         As senhas não conferem.
       </span>
       <ion-button expand="full" color="success" type="submit">Cadastrar</ion-button>
